# snippets

./: .gitignore  LICENSE  README.md
basics/: Cargo.toml
lec1/: Cargo.toml
lec2/: Cargo.toml
lec2/src/: ownership.rs
lec3/: Cargo.toml  impl_and_test.rs
lec3/src/: impl_and_test.rs  main.rs
lec4/: Cargo.toml
lec4/src/: main.rs  set.rs
lec5/: Cargo.toml
lec5/src/: main.rs
lec7/: Cargo.toml
lec7/data/: random.json
lec7/src/: main.rs
macro_exercises/: Cargo.toml
macro_exercises/derive_macro/: Cargo.toml
macro_exercises/derive_macro/src/: lib.rs
macro_exercises/function_like_macro/: Cargo.toml
macro_exercises/function_like_macro/src/: lib.rs
macro_exercises/use_macros/: Cargo.toml
macro_exercises/use_macros/src/: main.rs
