[package]
name = "basics"
version = "0.1.0"
edition = "2021"
authors = ["Joy Liu <joyliu.q@gmail.com>", "Caleb Stanford <caleb.pirsquared@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
reqwest = { version = "0.11.0", features = ["blocking"] }